--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="keywords" content="Dmego,Homepage">
     <meta name="author" content="Dmego">
     <title>GooGuJiang Home</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/onlinewebfonts.css"/>
-    <link rel="stylesheet" type="text/css" href="./assets/css/vno.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/diy.css">
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/onlinewebfonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/diy.css">
+    <link rel="apple-touch-icon" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//apple-touch-icon.png">
+    <link rel="icon" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//favicon.ico">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="./img/img.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/img/img.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
@@ -107,7 +107,7 @@
         </div> -->
         <div class="remark iUp">
             <p class="power">Powered By 
-                <a href="https://webify.cloudbase.net/" target="_blank"> CloudBase Webify </a>
+                <a href="#" target="_blank"> Github Page </a>
             </p>
         </div>
     </header>
