--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="keywords" content="Dmego,Homepage">
     <meta name="author" content="Dmego">
     <title>GooGuJiang Home</title>
-    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/onlinewebfonts.css"/>
-    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/vno.css">
-    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//assets/css/diy.css">
-    <link rel="apple-touch-icon" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//apple-touch-icon.png">
-    <link rel="icon" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la//favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/assets/css/onlinewebfonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/assets/css/vno.css">
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/assets/css/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/assets/css/diy.css">
+    <link rel="apple-touch-icon" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/apple-touch-icon.png">
+    <link rel="icon" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/favicon.ico">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
                         <a href="#" title="" class="blog-button">
-                            <div class="img"><img src="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/img/img.jpg" alt="img" class="js-avatar iUp profilepic"></div>
+                            <div class="img"><img src="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/img/img.jpg" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
                                     <h2> 
