--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dmego Home">
-    <meta name="keywords" content="Dmego,Homepage">
-    <meta name="author" content="Dmego">
+    <meta name="description" content="咕谷酱的主页">
+    <meta name="keywords" content="咕谷酱,主页">
+    <meta name="author" content="咕谷酱">
     <title>GooGuJiang Home</title>
     <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/assets/css/onlinewebfonts.css"/>
     <link rel="stylesheet" type="text/css" href="https://736a-sjk-18e082-1256280984.tcb.qcloud.la/wed/assets/css/vno.css">
