添加博客地址

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                                     <li class="navigation__item">
                                         <a href="https://t.me/GuGoo_qwq" class="blog-button" target="_blank">Telegram</a>
                                     </li>
+                                    <li class="navigation__item">
+                                        <a href="https://blog.gumoe.cc" class="blog-button" target="_blank">博客</a>
+                                    </li>
+                                    
                                 </ul>
                             </nav>
                         </div>
