更新页面链接

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                         <div>
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
-                                    
+                                    <li class="navigation__item">
+                                        <a href="https://gmoe.cc" class="blog-button" target="_blank">博客</a>
+                                    </li>
                                     <li class="navigation__item">
                                         <a href="https://space.bilibili.com/21141864" class="blog-button" target="_blank">BILIBILI</a>
                                     </li>
@@ -74,10 +76,7 @@
                                         <a href="https://t.me/GuGoo_qwq" class="blog-button" target="_blank">Telegram</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://blog.gumoe.cc" class="blog-button" target="_blank">博客</a>
-                                    </li>
-                                    <li class="navigation__item">
-                                        <a href="https://blog.gumoe.cc/s/about" class="blog-button">关于</a>
+                                        <a href="https://gmoe.cc/about.html" class="blog-button">关于</a>
                                     </li>
                                     
                                 </ul>
